--- a/committee/apo.html
+++ b/committee/apo.html
@@ -89,6 +89,13 @@
                 </p>
             </a>
 
+            <a href="#" class="sixth jacob"> 
+                <img src="../profiles/jacob_outline.png"/> 
+                <h2>Jacob Williams</h2>
+                <p>
+                    Jacob Williams is a first-year studying MCB Neurobiology and Cognitive Science, currently serving as the Pre-Med Academic and Professional Opportunities Administrator for the ASUC Office of Chaka Tellem. As a Bay Area native, Jacob attended Oakland School for the Arts before becoming a Shelby Davis Scholar and representing the United States at the United World College in Mostar, Bosnia and Herzegovina where he completed the IB Diploma before coming to Cal. Abroad, Jacob found his passion for public justice while volunteering in a post-war conflict zone as well as an underlying theme of academic study in STEM which aided his ability to positively impact lives within the local community and the Balkan region. At Cal, Jacob hopes to bring his passion for STEM to his studies in Pre-Med and eventually pursue Medical School. In his free time, he likes to travel, dance, have deep-conversations about the randomest topics, and explore the unknown. </p> 
+            </a>
+
             <a href="#" class="sixth isha">
                 <img src="../profiles/isha_outline.png"/> 
                 <h2>Isha Shah</h2> 
@@ -96,13 +103,6 @@
                     Isha Shah is the Pre-Med Academic and Professional Opportunities Administrator for the ASUC Office of Chaka Tellem. She is a junior majoring in Bioengineering, with a minor in Public Policy and Design Innovation, and is originally from Toronto, Canada. Isha’s passion to provide equitable education stems from her involvement as a Special Needs Education Tutor and Youth Empowerment Activist in highschool. After graduation, she wants to pursue medicine, while integrating healthcare and technology to provide accessible patient care to low income and underserved populations. Within the Berkeley Community, she is also a Campus Ambassador, Undergraduate Researcher at UCSF Medicine and part of the Society of Women Engineers.
 
                 </p> 
-            </a>
-
-            <a href="#" class="sixth jacob"> 
-                <img src="../profiles/jacob_outline.png"/> 
-                <h2>Jacob Williams</h2>
-                <p>
-                    Jacob Williams is a first-year studying MCB Neurobiology and Cognitive Science, currently serving as the Pre-Med Academic and Professional Opportunities Administrator for the ASUC Office of Chaka Tellem. As a Bay Area native, Jacob attended Oakland School for the Arts before becoming a Shelby Davis Scholar and representing the United States at the United World College in Mostar, Bosnia and Herzegovina where he completed the IB Diploma before coming to Cal. Abroad, Jacob found his passion for public justice while volunteering in a post-war conflict zone as well as an underlying theme of academic study in STEM which aided his ability to positively impact lives within the local community and the Balkan region. At Cal, Jacob hopes to bring his passion for STEM to his studies in Pre-Med and eventually pursue Medical School. In his free time, he likes to travel, dance, have deep-conversations about the randomest topics, and explore the unknown. </p> 
             </a>
 
             <a href="#" class="sixth alfonse">
@@ -292,7 +292,7 @@
     .imgresponsive {
       padding: 0vw;
       padding-right: 0px;
-      width: 40%;
+      width: 30%;
       height: auto;
     }
 
@@ -390,9 +390,9 @@
         align-content: center;
         border-radius: 10%;
         margin-top: 10px;
-        margin-bottom: 200px;
-        width: 60%;
-        left: 23%;
+        margin-bottom: 20vw;
+        width: 55%;
+        left: 20%;
         
     }
 
@@ -412,111 +412,175 @@
         background-color: #fcf6f2;
     }
 
-
-    .isha h2 { 
-        position: relative;
+    .kalliope img {
+        background-color: #070F2E;
+        padding-top: 7vw;
         padding-bottom: 0px;
-        margin: 0px;
-        display: inline;
-        font-family: sofia-pro, sans-serif;
-        font-weight: 800;
-        font-style: normal;
-        font-size: 1em;
-        color: black;
-        text-align: center;
-    }
-
-    .isha p { 
-        margin: 30px;
-        padding-top: 620px;
-        font-family: sofia-pro, sans-serif;
-        font-weight: 600;
-        font-style: normal;
-        font-size: .5em;
-        color: #1f2630;
-        text-align: center;
-        padding-bottom: 63px;
+        padding-right: 1vw;
+        padding-left: 7vw;
     }
 
     .kalliope h2 {
-        position: relative;
+        position: absolute;
         padding-bottom: 0px;
+        top: 1vw;
+        left: 0;
         margin: 0px;
         display: inline;
         font-family: sofia-pro, sans-serif;
         font-weight: 800;
         font-style: normal;
-        font-size: 1em;
-        color: black;
+        font-size: .9em;
+        color: white;
         text-align: center;
+        padding: 30px;
+        padding-right: 2vw;
+        padding-left: 2vw;
+        background-color: #48667E;
     }
 
     .kalliope p { 
-        margin: 30px;
-        padding-top: 680px;
+        margin: 50px;
+        padding-top: 45vw;
+        padding-left: 8vw;
         font-family: sofia-pro, sans-serif;
-        font-weight: 600;
+        font-weight: 200;
         font-style: normal;
-        font-size: .5em;
-        color: #1f2630;
+        font-size: 1.1vw;
+        color: white;
         text-align: center;
         padding-bottom: 63px;
+        background: #48667E;
+        background-clip: content-box;
+    }
+
+    .jacob img {
+        background-color: #070F2E;
+        padding-top: 4vw;
+        padding-bottom: 0px;
+        padding-right: 0vw;
+        padding-left: 6vw;
     }
 
 
     .jacob h2 { 
-        position: relative;
+        position: absolute;
         padding-bottom: 0px;
+        top: 1vw;
+        left: 0;
         margin: 0px;
         display: inline;
         font-family: sofia-pro, sans-serif;
         font-weight: 800;
         font-style: normal;
-        font-size: 1em;
-        color: black;
+        font-size: .9em;
+        color: white;
         text-align: center;
+        padding: 30px;
+        padding-right: 3vw;
+        padding-left: 3vw;
+        background-color: #48667E;
     }
 
     .jacob p { 
-        margin: 30px;
-        padding-top: 730px;
+        margin: 50px;
+        padding-top: 45vw;
+        padding-left: 8vw;
         font-family: sofia-pro, sans-serif;
-        font-weight: 600;
+        font-weight: 200;
         font-style: normal;
-        font-size: .5em;
-        color: #1f2630;
+        font-size: 1.1vw;
+        color: white;
         text-align: center;
-        padding-bottom: 63px;
+        padding-bottom: 73px;
+        background: #48667E;
+        background-clip: content-box;
     }
 
-    .jacob img { 
-        postion: relative;
-        top: 200px;
-    }
-
-    .alfonse h2 { 
-        position: relative;
+    .isha img {
+        background-color: #070F2E;
+        padding-top: 7vw;
         padding-bottom: 0px;
+        padding-right: 1vw;
+        padding-left: 7vw;
+    }
+
+
+    .isha h2 { 
+        position: absolute;
+        padding-bottom: 0px;
+        top: 1vw;
+        left: 0;
         margin: 0px;
         display: inline;
         font-family: sofia-pro, sans-serif;
         font-weight: 800;
         font-style: normal;
-        font-size: 1em;
-        color: black;
+        font-size: .9em;
+        color: white;
         text-align: center;
+        padding: 30px;
+        padding-right: 3vw;
+        padding-left: 3vw;
+        background-color: #48667E;
+    }
+
+    .isha p { 
+        margin: 50px;
+        padding-top: 45vw;
+        padding-left: 8vw;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 200;
+        font-style: normal;
+        font-size: 1.1vw;
+        color: white;
+        text-align: center;
+        padding-bottom: 63px;
+        background: #48667E;
+        background-clip: content-box;
+    }
+
+    .alfonse img {
+        background-color: #070F2E;
+        padding-top: 7vw;
+        padding-bottom: 0px;
+        padding-right: 0vw;
+        padding-left: 3vw;
+    }
+
+
+    .alfonse h2 { 
+        position: absolute;
+        padding-bottom: 0px;
+        top: 1vw;
+        left: 0;
+        margin: 0px;
+        display: inline;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 800;
+        font-style: normal;
+        font-size: .9em;
+        color: white;
+        text-align: center;
+        padding: 30px;
+        padding-right: 3vw;
+        padding-left: 3vw;
+        background-color: #48667E;
     }
 
     .alfonse p { 
-        margin: 30px;
-        padding-top: 580px;
+        margin: 50px;
+        padding-top: 40vw;
+        padding-left: 8vw;
         font-family: sofia-pro, sans-serif;
-        font-weight: 600;
+        font-weight: 200;
         font-style: normal;
-        font-size: .5em;
-        color: #1f2630;
+        font-size: 1.1vw;
+        color: white;
         text-align: center;
         padding-bottom: 63px;
+        background: #48667E;
+        background-clip: content-box;
     }
 
     .sixth p {
