--- a/committee/ce.html
+++ b/committee/ce.html
@@ -310,9 +310,9 @@
         align-content: center;
         border-radius: 10%;
         margin-top: 10px;
-        margin-bottom: 200px;
+        margin-bottom: 15vw;
         width: 60%;
-        left: 23%;
+        left: 15%;
         
     }
 
@@ -333,85 +333,134 @@
     }
 
 
-    .bianca h2 { /*rename*/
-        position: relative;
+    .jason img {
+        background-color: #070F2E;
+        padding-top: 7vw;
         padding-bottom: 0px;
+        padding-right: 1vw;
+        padding-left: 4vw;
+    }
+
+    .jason h2 {
+        position: absolute;
+        padding-bottom: 0px;
+        top: 1.5vw;
+        left: 0;
         margin: 0px;
         display: inline;
         font-family: sofia-pro, sans-serif;
         font-weight: 800;
         font-style: normal;
-        font-size: 1em;
-        color: black;
+        font-size: .9em;
+        color: white;
         text-align: center;
+        padding: 1vw;
+        padding-right: 5vw;
+        padding-left: 5vw;
+        background-color: #48667E;
     }
 
-    .bianca p { /*rename*/
-        margin: 30px;
-        padding-top: 585px;
+    .jason p {
+        margin: 50px;
+        padding-top: 38vw;
+        padding-left: 5vw;
         font-family: sofia-pro, sans-serif;
-        font-weight: 600;
+        font-weight: 200;
         font-style: normal;
-        font-size: .64em;
-        color: #1f2630;
+        font-size: 1.1vw;
+        color: white;
         text-align: center;
         padding-bottom: 63px;
+        background: #48667E;
+        background-clip: content-box;
+        
     }
 
-    .jason h2 { /*rename*/
-        position: relative;
+
+    .bianca img {
+        background-color: #070F2E;
+        padding-top: 6vw;
         padding-bottom: 0px;
+        padding-right: 1vw;
+        padding-left: 5vw;
+    }
+
+
+    .bianca h2 { 
+        position: absolute;
+        padding-bottom: 0px;
+        top: 1vw;
+        left: 0;
         margin: 0px;
         display: inline;
         font-family: sofia-pro, sans-serif;
         font-weight: 800;
         font-style: normal;
-        font-size: 1em;
-        color: black;
+        font-size: .9em;
+        color: white;
         text-align: center;
+        padding: 1vw;
+        padding-right: 3vw;
+        padding-left: 3vw;
+        background-color: #48667E;
     }
 
-    .jason p { /*rename*/
-        margin: 30px;
-        padding-top: 650px;
+    .bianca p { 
+        margin: 50px;
+        padding-top: 35vw;
+        padding-left: 5vw;
         font-family: sofia-pro, sans-serif;
-        font-weight: 600;
+        font-weight: 200;
         font-style: normal;
-        font-size: .64em;
-        color: #1f2630;
+        font-size: 1.1vw;
+        color: white;
         text-align: center;
         padding-bottom: 63px;
+        background: #48667E;
+        background-clip: content-box;
+    }
+
+    .zach img {
+        background-color: #070F2E;
+        padding-top: 8vw;
+        padding-bottom: 0px;
+        padding-right: 1vw;
+        padding-left: 3vw;
     }
 
 
-    .zach h2 { /*rename*/
-        position: relative;
+    .zach h2 { 
+        position: absolute;
         padding-bottom: 0px;
+        top: 1vw;
+        left: 0;
         margin: 0px;
         display: inline;
         font-family: sofia-pro, sans-serif;
         font-weight: 800;
         font-style: normal;
-        font-size: 1em;
-        color: black;
+        font-size: .9em;
+        color: white;
         text-align: center;
+        padding: 30px;
+        padding-right: 3vw;
+        padding-left: 3vw;
+        background-color: #48667E;
     }
 
-    .zach p { /*rename*/
-        margin: 30px;
-        padding-top: 670px;
+    .zach p { 
+        margin: 50px;
+        padding-top: 38vw;
+        padding-left: 3vw;
         font-family: sofia-pro, sans-serif;
-        font-weight: 600;
+        font-weight: 200;
         font-style: normal;
-        font-size: .64em;
-        color: #1f2630;
+        font-size: 1.1vw;
+        color: white;
         text-align: center;
         padding-bottom: 63px;
-    }
-
-    .zach img { /*rename*/
-        postion: relative;
-        top: 200px;
+        background: #48667E;
+        background-clip: content-box;
     }
 
     .sixth p {
