--- a/committee/legislative.html
+++ b/committee/legislative.html
@@ -107,7 +107,7 @@
             </a>
 
             <a href="#" class="sixth cyn"> 
-                <img src="leg/cyngomez.jpeg"/> 
+                <img src="leg/cyngomez.png"/> 
                 <h2>Cyn Gomez</h2>
                 <p>
                     Cyn Gomez is a Legislative Associate for the ASUC Office of Chaka Tellem. They are a freshman currently intending to major in Social Welfare with a double minor in Public Policy and Spanish. Their goal is to create systematic change that uplifts underrepresented communities and fights alongside others for representation. After undergrad, Cyn wants to attend law school and practice civil rights law to protect and advocate for those who have been wronged by a system that should be built to protect everyone. They love to read, take naps, and embroider in their freetime, among going for runs and working out to destress. In their free time, you can catch Cyn planning for their next week or studying for any and every class!
@@ -392,9 +392,9 @@
         align-content: center;
         border-radius: 10%;
         margin-top: 10px;
-        margin-bottom: 200px;
+        margin-bottom: 20vw;
         width: 60%;
-        left: 23%;
+        left: 15%;
         
     }
 
@@ -414,111 +414,174 @@
         background-color: #fcf6f2;
     }
 
-
-    .anallely h2 { 
-        position: relative;
+    .issabella img {
+        background-color: #070F2E;
+        padding-top: 7vw;
         padding-bottom: 0px;
-        margin: 0px;
-        display: inline;
-        font-family: sofia-pro, sans-serif;
-        font-weight: 800;
-        font-style: normal;
-        font-size: 1em;
-        color: black;
-        text-align: center;
-    }
-
-    .anallely p { 
-        margin: 30px;
-        padding-top: 700px;
-        font-family: sofia-pro, sans-serif;
-        font-weight: 600;
-        font-style: normal;
-        font-size: .55em;
-        color: #1f2630;
-        text-align: center;
-        padding-bottom: 63px;
+        padding-right: 1vw;
+        padding-left: 7vw;
     }
 
     .issabella h2 {
-        position: relative;
+        position: absolute;
         padding-bottom: 0px;
+        top: 1vw;
+        left: 0;
         margin: 0px;
         display: inline;
         font-family: sofia-pro, sans-serif;
         font-weight: 800;
         font-style: normal;
-        font-size: 1em;
-        color: black;
+        font-size: .9em;
+        color: white;
         text-align: center;
+        padding: 30px;
+        padding-right: 2vw;
+        padding-left: 2vw;
+        background-color: #48667E;
     }
 
     .issabella p { 
-        margin: 30px;
-        padding-top: 690px;
+        margin: 50px;
+        padding-top: 40vw;
+        padding-left: 8vw;
         font-family: sofia-pro, sans-serif;
-        font-weight: 600;
+        font-weight: 200;
         font-style: normal;
-        font-size: .6em;
-        color: #1f2630;
+        font-size: 1.1vw;
+        color: white;
         text-align: center;
         padding-bottom: 63px;
+        background: #48667E;
+        background-clip: content-box;
     }
 
 
-    .jalen h2 { 
-        position: relative;
+    .anallely img {
+        background-color: #070F2E;
+        padding-top: 3vw;
         padding-bottom: 0px;
+        padding-right: 1vw;
+        padding-left: 6vw;
+    }
+
+    .anallely h2 {
+        position: absolute;
+        padding-bottom: 0px;
+        top: 1vw;
+        left: 0;
         margin: 0px;
         display: inline;
         font-family: sofia-pro, sans-serif;
         font-weight: 800;
         font-style: normal;
-        font-size: 1em;
-        color: black;
+        font-size: .9em;
+        color: white;
         text-align: center;
+        padding: 30px;
+        padding-right: 2vw;
+        padding-left: 2vw;
+        background-color: #48667E;
+    }
+
+    .anallely p { 
+        margin: 50px;
+        padding-top: 40vw;
+        padding-left: 8vw;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 200;
+        font-style: normal;
+        font-size: 1.1vw;
+        color: white;
+        text-align: center;
+        padding-bottom: 63px;
+        background: #48667E;
+        background-clip: content-box;
+    }
+
+
+    .jalen img {
+        background-color: #070F2E;
+        padding-top: 7vw;
+        padding-bottom: 0px;
+        padding-right: 1vw;
+        padding-left: 7vw;
+    }
+
+    .jalen h2 {
+        position: absolute;
+        padding-bottom: 0px;
+        top: 1vw;
+        left: 0;
+        margin: 0px;
+        display: inline;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 800;
+        font-style: normal;
+        font-size: .9em;
+        color: white;
+        text-align: center;
+        padding: 30px;
+        padding-right: 2vw;
+        padding-left: 2vw;
+        background-color: #48667E;
     }
 
     .jalen p { 
-        margin: 30px;
-        padding-top: 720px;
+        margin: 50px;
+        padding-top: 35vw;
+        padding-left: 8vw;
         font-family: sofia-pro, sans-serif;
-        font-weight: 600;
+        font-weight: 200;
         font-style: normal;
-        font-size: .6em;
-        color: #1f2630;
+        font-size: 1.1vw;
+        color: white;
         text-align: center;
         padding-bottom: 63px;
+        background: #48667E;
+        background-clip: content-box;
     }
 
-    .jalen img { 
-        postion: relative;
-        top: 200px;
-    }
-
-    .cyn h2 { 
-        position: relative;
+    .cyn img {
+        background-color: #070F2E;
+        padding-top: 4vw;
         padding-bottom: 0px;
+        padding-right: 1vw;
+        padding-left: 7vw;
+    }
+
+    .cyn h2 {
+        position: absolute;
+        padding-bottom: 0px;
+        top: 1vw;
+        left: 0;
         margin: 0px;
         display: inline;
         font-family: sofia-pro, sans-serif;
         font-weight: 800;
         font-style: normal;
-        font-size: 1em;
-        color: black;
+        font-size: .9em;
+        color: white;
         text-align: center;
+        padding: 30px;
+        padding-right: 2vw;
+        padding-left: 2vw;
+        background-color: #48667E;
     }
 
     .cyn p { 
-        margin: 30px;
-        padding-top: 800px;
+        margin: 50px;
+        padding-top: 40vw;
+        padding-left: 8vw;
         font-family: sofia-pro, sans-serif;
-        font-weight: 600;
+        font-weight: 200;
         font-style: normal;
-        font-size: .64em;
-        color: #1f2630;
+        font-size: 1.1vw;
+        color: white;
         text-align: center;
         padding-bottom: 63px;
+        background: #48667E;
+        background-clip: content-box;
     }
 
     .sixth p {
