--- a/committee/ej.html
+++ b/committee/ej.html
@@ -377,9 +377,9 @@
         align-content: center;
         border-radius: 10%;
         margin-top: 10px;
-        margin-bottom: 200px;
+        margin-bottom: 15vw;
         width: 60%;
-        left: 23%;
+        left: 15%;
         
     }
 
@@ -399,86 +399,134 @@
         background-color: #fcf6f2;
     }
 
-
-    .sydney h2 { 
-        position: relative;
+    .kaylee img {
+        background-color: #070F2E;
+        padding-top: 6vw;
         padding-bottom: 0px;
+        padding-right: 1vw;
+        padding-left: 4vw;
+    }
+
+    .kaylee h2 {
+        position: absolute;
+        padding-bottom: 0px;
+        top: 2vw;
+        left: 0;
         margin: 0px;
         display: inline;
         font-family: sofia-pro, sans-serif;
         font-weight: 800;
         font-style: normal;
-        font-size: 1em;
-        color: black;
+        font-size: .9em;
+        color: white;
         text-align: center;
+        padding: 0vw;
+        padding-right: 5vw;
+        padding-left: 5vw;
+        background-color: #48667E;
+    }
+
+    .kaylee p {
+        margin: 50px;
+        padding-top: 40vw;
+        padding-left: 5vw;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 200;
+        font-style: normal;
+        font-size: 1.1vw;
+        color: white;
+        text-align: center;
+        padding-bottom: 63px;
+        background: #48667E;
+        background-clip: content-box;
+        
+    }
+
+
+    .sydney img {
+        background-color: #070F2E;
+        padding-top: 4vw;
+        padding-bottom: 0px;
+        padding-right: 1vw;
+        padding-left: 5vw;
+    }
+
+
+    .sydney h2 { 
+        position: absolute;
+        padding-bottom: 0px;
+        top: 1vw;
+        left: 0;
+        margin: 0px;
+        display: inline;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 800;
+        font-style: normal;
+        font-size: .9em;
+        color: white;
+        text-align: center;
+        padding: 30px;
+        padding-right: 3vw;
+        padding-left: 3vw;
+        background-color: #48667E;
     }
 
     .sydney p { 
-        margin: 30px;
-        padding-top: 630px;
+        margin: 50px;
+        padding-top: 40vw;
+        padding-left: 5vw;
         font-family: sofia-pro, sans-serif;
-        font-weight: 600;
+        font-weight: 200;
         font-style: normal;
-        font-size: .6em;
-        color: #1f2630;
+        font-size: 1.1vw;
+        color: white;
         text-align: center;
         padding-bottom: 63px;
+        background: #48667E;
+        background-clip: content-box;
     }
 
-    .kaylee h2 { 
-        position: relative;
+    .george img {
+        background-color: #070F2E;
+        padding-top: 8vw;
         padding-bottom: 0px;
+        padding-right: 1vw;
+        padding-left: 3vw;
+    }
+
+
+    .george h2 { 
+        position: absolute;
+        padding-bottom: 0px;
+        top: 1vw;
+        left: 0;
         margin: 0px;
         display: inline;
         font-family: sofia-pro, sans-serif;
         font-weight: 800;
         font-style: normal;
-        font-size: 1em;
-        color: black;
+        font-size: .9em;
+        color: white;
         text-align: center;
-    }
-
-    .kaylee p { 
-        margin: 30px;
-        padding-top: 660px;
-        font-family: sofia-pro, sans-serif;
-        font-weight: 600;
-        font-style: normal;
-        font-size: .6em;
-        color: #1f2630;
-        text-align: center;
-        padding-bottom: 63px;
-    }
-
-
-    .george h2 {
-        position: relative;
-        padding-bottom: 0px;
-        margin: 0px;
-        display: inline;
-        font-family: sofia-pro, sans-serif;
-        font-weight: 800;
-        font-style: normal;
-        font-size: 1em;
-        color: black;
-        text-align: center;
+        padding: 30px;
+        padding-right: 3vw;
+        padding-left: 3vw;
+        background-color: #48667E;
     }
 
     .george p { 
-        margin: 30px;
-        padding-top: 590px;
+        margin: 50px;
+        padding-top: 38vw;
+        padding-left: 3vw;
         font-family: sofia-pro, sans-serif;
-        font-weight: 600;
+        font-weight: 200;
         font-style: normal;
-        font-size: .64em;
-        color: #1f2630;
+        font-size: 1.1vw;
+        color: white;
         text-align: center;
         padding-bottom: 63px;
-    }
-
-    .george img { 
-        postion: relative;
-        top: 200px;
+        background: #48667E;
+        background-clip: content-box;
     }
 
     .sixth p {
